[workspace]
members = [
    "crates/registry-witness-core",
    "crates/registry-witness-server",
    "crates/registry-witness-bin",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jeremi/registry-witness"

[workspace.dependencies]
axum = { version = "0.8" }
base64 = { version = "0.22" }
clap = { version = "4", features = ["derive", "env"] }
registry-witness-core = { version = "0.2.0", path = "crates/registry-witness-core" }
registry-witness-server = { version = "0.2.0", path = "crates/registry-witness-server", default-features = false }
cel-mapper-core = { version = "0.1.1", git = "https://github.com/PublicSchema/cel-mapping", rev = "32679bb78c969b8f33129113e31465dbe54b0ea0" }
getrandom = { version = "0.4" }
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
registry-platform-audit = { version = "0.1.0", path = "../registry-platform/crates/registry-platform-audit" }
registry-platform-authcommon = { version = "0.1.0", path = "../registry-platform/crates/registry-platform-authcommon" }
registry-platform-crypto = { version = "0.1.0", path = "../registry-platform/crates/registry-platform-crypto" }
registry-platform-httpsec = { version = "0.1.0", path = "../registry-platform/crates/registry-platform-httpsec" }
registry-platform-httputil = { version = "0.1.0", path = "../registry-platform/crates/registry-platform-httputil" }
registry-platform-oidc = { version = "0.1.0", path = "../registry-platform/crates/registry-platform-oidc" }
registry-platform-sdjwt = { version = "0.1.0", path = "../registry-platform/crates/registry-platform-sdjwt" }
registry-platform-testing = { version = "0.1.0", path = "../registry-platform/crates/registry-platform-testing" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yml = { version = "0.0.12" }
sha2 = { version = "0.11" }
subtle = { version = "2" }
thiserror = { version = "2" }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "signal", "macros", "net", "fs", "time", "sync"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace", "request-id", "cors"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
ulid = { version = "1" }
utoipa = { version = "5" }
zeroize = { version = "1" }
