[package]
name = "registryctl"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
ed25519-dalek = "2"
getrandom = "0.3"
registry-config-report = { git = "https://github.com/jeremi/registry-platform", rev = "88d1a798043673dac30d809d87badb083c6e1a26" }
registry-platform-authcommon = { git = "https://github.com/jeremi/registry-platform", rev = "88d1a798043673dac30d809d87badb083c6e1a26" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ureq = "2"
url = "2"

[dev-dependencies]
tempfile = "3"
