[package]
name = "registry-relay"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Registry Relay: config-driven, read-only APIs over sensitive registry and tabular files."
publish = false

[features]
default = []
standards-cel-mapping = ["dep:cel-mapper-core"]
publicschema-cel = ["standards-cel-mapping", "dep:jsonschema"]
spdci-api-standards = ["dep:jsonschema"]
ogcapi-features = ["dep:ogcapi-types", "dep:geojson"]

# ─── runtime ─────────────────────────────────────────────────────────────────
[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "signal",
    "fs",
    "net",
    "macros",
    "time",
] }
axum = { version = "0.8" }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = [
    "trace",
    "request-id",
    "cors",
    "timeout",
    "limit",
    "set-header",
] }

# ─── data ────────────────────────────────────────────────────────────────────
# datafusion minor is pinned because bumping means re-typing the Source
# trait's RecordBatch return across multiple modules.
# Current pin: 53.1.
datafusion = { version = "53.1" }
calamine = { version = "0.35" }
csv = { version = "1" }
tokio-postgres = { version = "0.7", features = ["with-time-0_3"] }
postgres-native-tls = { version = "0.5" }
native-tls = { version = "0.2" }
# Used by Source/Format trait surfaces (BoxStream); also a transitive
# of datafusion but pinned here so the public surface compiles without
# relying on a re-export path.
futures = { version = "0.3" }
bytes = { version = "1" }
# Atomic state swap for IngestPlan readiness (single-writer, many-reader).
arc-swap = { version = "1" }
# Implements DataFusion's async TableProvider delegation for atomic swaps.
async-trait = { version = "0.1" }
# CancellationToken for refresh-loop shutdown.
tokio-util = { version = "0.7" }

# ─── serialization / config ──────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
ryu = { version = "1" }
# Optional PublicSchema.org entity-VC mapping support. Disabled by default so
# the core VC path does not pull in the CEL mapper dependency graph.
cel-mapper-core = { version = "0.1", git = "https://github.com/PublicSchema/cel-mapping", rev = "fc67388b0b4cba6b4fe6f684c449d9484e5d0b5b", optional = true }
jsonschema = { version = "0.18", optional = true }
# serde_yml: maintained community fork of the archived serde_yaml.
# Version is pinned to the exact minor as it is a young fork; re-evaluate
# deliberately before changing it.
serde_yml = { version = "0.0.12" }
humantime-serde = { version = "1" }

# ─── auth / crypto ───────────────────────────────────────────────────────────
getrandom = { version = "0.3" }
hmac = { version = "0.12" }
sha2 = { version = "0.10" }
subtle = { version = "2" }
zeroize = { version = "1" }
# JWS compact serialization and EdDSA / ES256 signing primitives.
# We build the VC-JWT payload by hand to control the VCDM 2.0 envelope
# shape; jsonwebtoken provides the signing/verification primitives only.
jsonwebtoken = { version = "9" }
# urn:uuid:* identifiers for VC jti / id.
uuid = { version = "1", features = ["v4"] }
# Robust Accept media-type parsing for provenance content negotiation.
# Already a transitive dep of axum, pinned here so the
# public surface compiles without depending on a re-export path.
mime = { version = "0.3" }
# base64url encoding used by the VC-JWT compact serialization.
base64 = { version = "0.22" }
# Used by the OIDC auth provider to fetch JWKS documents and resolve
# `.well-known/openid-configuration`. native-tls keeps the TLS stack
# consistent with the postgres-native-tls path already in this binary.
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

# ─── time / ids ──────────────────────────────────────────────────────────────
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
ulid = { version = "1" }

# ─── observability ───────────────────────────────────────────────────────────
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
tracing-error = { version = "0.2" }

# ─── errors / problem details ────────────────────────────────────────────────
thiserror = { version = "2" }
http-api-problem = { version = "0.60" }

# ─── openapi ─────────────────────────────────────────────────────────────────
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = { version = "0.2" }
ogcapi-types = { version = "0.3.0", optional = true, features = ["features"] }
geojson = { version = "0.24", optional = true }

# ─── dev / test ──────────────────────────────────────────────────────────────
[dev-dependencies]
axum-test = { version = "20" }
assert-json-diff = { version = "2" }
proptest = { version = "1" }
tempfile = { version = "3" }
insta = { version = "1", features = ["json"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
# Used only by format_xlsx tests to construct a synthetic XLSX (a ZIP)
# whose `<dimension>` element advertises a cell count over the cap. The
# package version matches the one calamine 0.35 pulls transitively so we
# don't multiply build-time copies.
zip = { version = "7", default-features = false, features = ["deflate"] }
# Validates credentialSubject payloads against the JSON Schemas we
# publish at /schemas/...
jsonschema = { version = "0.18" }
# Ed25519 key generation for tests so they can mint fresh keypairs and
# convert them to/from JWK without shelling out to openssl.
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
# rand for ed25519-dalek key generation in tests.
rand_core = { version = "0.6", features = ["std"] }
# Parses `resources/MANIFEST.toml` in the resource pinning test.
toml = { version = "0.8" }
# Criterion drives the microbenchmarks under `benches/`. The benches are
# manually invoked via `cargo bench`; CI only smoke-checks `cargo bench --no-run`.
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "auth_bench"
harness = false

[[bench]]
name = "etag_bench"
harness = false

[[bench]]
name = "registry_bench"
harness = false

[[bench]]
name = "query_bench"
harness = false

[[bench]]
name = "json_bench"
harness = false

[[bench]]
name = "audit_bench"
harness = false

[[bench]]
name = "claim_verification_bench"
harness = false
