[package]
name = "registry-relay"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
license = "Apache-2.0"
description = "Registry Relay: config-driven, read-only APIs over sensitive registry and tabular files."
publish = false

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]

[workspace]
members = [
    ".",
]

[features]
default = []
crosswalk-runtime = ["dep:crosswalk-core"]
standards-cel-mapping = ["crosswalk-runtime"]
publicschema-cel = ["crosswalk-runtime", "dep:jsonschema"]
spdci-api-standards = ["dep:jsonschema"]
ogcapi-features = ["dep:ogcapi-types", "dep:geojson"]
ogcapi-edr = ["dep:geo", "dep:geo-types", "dep:geojson", "dep:wkt"]
ogcapi-records = []

# ─── runtime ─────────────────────────────────────────────────────────────────
[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "signal",
    "fs",
    "net",
    "macros",
    "time",
] }
axum = { version = "0.8" }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = [
    "trace",
    "request-id",
    "cors",
    "timeout",
    "set-header",
] }

# ─── data ────────────────────────────────────────────────────────────────────
# datafusion minor is pinned because bumping means re-typing the Source
# trait's RecordBatch return across multiple modules.
# Current pin: 53.1.
datafusion = { version = "53.1" }
calamine = { version = "0.35" }
csv = { version = "1" }
tokio-postgres = { version = "0.7", features = ["with-time-0_3"] }
postgres-native-tls = { version = "0.5" }
native-tls = { version = "0.2" }
# Used by Source/Format trait surfaces (BoxStream); also a transitive
# of datafusion but pinned here so the public surface compiles without
# relying on a re-export path.
futures = { version = "0.3" }
bytes = { version = "1" }
# Atomic state swap for IngestPlan readiness (single-writer, many-reader).
arc-swap = { version = "1" }
# Implements DataFusion's async TableProvider delegation for atomic swaps.
async-trait = { version = "0.1" }
# CancellationToken for refresh-loop shutdown.
tokio-util = { version = "0.7" }

# ─── serialization / config ──────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
# Optional Crosswalk CEL mapping support. Disabled by default so the core VC
# path does not pull in the mapping dependency graph.
crosswalk-core = { version = "0.1.1", path = "../cel-mapping/crates/crosswalk-core", optional = true }
jsonschema = { version = "0.18", optional = true }
# Pure Rust YAML parser used instead of the previous unmaintained YAML stack.
serde-saphyr = { version = "0.0.26" }
humantime-serde = { version = "1" }
registry-manifest-core = { version = "0.1.1", git = "https://github.com/jeremi/registry-manifest", tag = "v0.1.2" }

# ─── auth / crypto ───────────────────────────────────────────────────────────
registry-platform-authcommon = { version = "0.1.2", path = "../registry-platform/crates/registry-platform-authcommon" }
registry-platform-audit = { version = "0.1.2", path = "../registry-platform/crates/registry-platform-audit" }
registry-platform-crypto = { version = "0.1.2", path = "../registry-platform/crates/registry-platform-crypto" }
registry-platform-httpsec = { version = "0.1.2", path = "../registry-platform/crates/registry-platform-httpsec" }
registry-platform-httputil = { version = "0.1.2", path = "../registry-platform/crates/registry-platform-httputil" }
registry-platform-oidc = { version = "0.1.2", path = "../registry-platform/crates/registry-platform-oidc" }
registry-platform-sdjwt = { version = "0.1.2", path = "../registry-platform/crates/registry-platform-sdjwt" }
getrandom = { version = "0.4" }
hmac = { version = "0.13" }
sha2 = { version = "0.11" }
subtle = { version = "2" }
zeroize = { version = "1" }
# JWS compact serialization and EdDSA / ES256 signing primitives.
# We build the VC-JWT payload by hand to control the VCDM 2.0 envelope
# shape; jsonwebtoken provides the signing/verification primitives only.
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
# urn:uuid:* identifiers for VC jti / id.
uuid = { version = "1", features = ["v4"] }
# base64url encoding used by the VC-JWT compact serialization.
base64 = { version = "0.22" }
# Used by the OIDC auth provider to fetch JWKS documents and resolve
# `.well-known/openid-configuration`. native-tls keeps the TLS stack
# consistent with the postgres-native-tls path already in this binary.
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

# ─── time / ids ──────────────────────────────────────────────────────────────
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
ulid = { version = "1" }

# ─── observability ───────────────────────────────────────────────────────────
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }

# ─── errors ──────────────────────────────────────────────────────────────────
thiserror = { version = "2" }

# ─── openapi ─────────────────────────────────────────────────────────────────
ogcapi-types = { version = "0.3.0", optional = true, features = ["features"] }
geojson = { version = "0.24", optional = true, features = ["geo-types"] }
geo = { version = "0.31", optional = true }
geo-types = { version = "0.7", optional = true }
wkt = { version = "0.12", optional = true, features = ["geo-types"] }

# ─── dev / test ──────────────────────────────────────────────────────────────
[dev-dependencies]
axum-test = { version = "20" }
assert-json-diff = { version = "2" }
proptest = { version = "1" }
tempfile = { version = "3" }
insta = { version = "1", features = ["json"] }
# Used only by format_xlsx tests to construct a synthetic XLSX (a ZIP)
# whose `<dimension>` element advertises a cell count over the cap. The
# package version matches the one calamine 0.35 pulls transitively so we
# don't multiply build-time copies.
zip = { version = "7", default-features = false, features = ["deflate"] }
# Validates credentialSubject payloads against the JSON Schemas we
# publish at /schemas/...
jsonschema = { version = "0.18" }
# Ed25519 key generation for tests so they can mint fresh keypairs and
# convert them to/from JWK without shelling out to openssl.
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
# rand for ed25519-dalek key generation in tests.
rand_core = { version = "0.6", features = ["std"] }
# Parses `resources/MANIFEST.toml` in the resource pinning test.
toml = { version = "1.1" }
# Criterion drives the microbenchmarks under `benches/`. The benches are
# manually invoked via `cargo bench`; CI only smoke-checks `cargo bench --no-run`.
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "auth_bench"
harness = false

[[bench]]
name = "etag_bench"
harness = false

[[bench]]
name = "registry_bench"
harness = false

[[bench]]
name = "query_bench"
harness = false

[[bench]]
name = "json_bench"
harness = false

[[bench]]
name = "audit_bench"
harness = false

# Slim DWARF in dev builds. Each of the 50 integration test files links
# its own binary that statically pulls in datafusion / axum / etc.; full
# debug info pushes each binary past 200 MB and dominates link time. The
# `line-tables-only` setting keeps panic backtraces and source-line
# resolution intact while cutting binary size (and link wall time)
# roughly 5-10x. Override locally with `CARGO_PROFILE_DEV_DEBUG=2` if a
# debugger needs full DWARF.
[profile.dev]
debug = "line-tables-only"

# Same treatment for the `test` profile, which integration tests use.
[profile.test]
debug = "line-tables-only"
